i mad my charts exspand with the size of the page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <P>ANOTHER PARAGRAPH</p>
   <a href="second.html">click here for picture of my babies & you can also click there photos to find a linked website based on how i feed them</a>
 <h5>here is and example of there favorite foods</h5>
-<table border="2">
+<table border="2"  width='100%'>
     <tr>
         <th>breakfast</th>
         <th>lunch</th>
@@ -27,7 +27,7 @@
             <td>sandwitchs</td>
             <td>meat rice & veggies</td>
 </table>
-<table border="1">
+<table border="1" width="100%">
    <tr>
     <th colspan="3"><h2>odd but cool things about kids</h2></th>
    </tr>
@@ -36,11 +36,6 @@
      <th>thigs they eat</th>
      <th>things they love</th>
    </tr>
-   <tr></tr>
-   <tr></tr>
-   <tr></tr>
-   <tr></tr>
-   <tr></tr>
    <tr></tr>
    <tr></tr>
    <tr></tr>
