--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html>
 <head>
+  <style type="text/css">
+  body { background-image:url(them2.jpg);
+    background-color:pink;
+  }
+  h1 {text-align:center;}
+  body h1 {
+color:#f44289;
+  }
+  </style>
 <title>samirah & sahryah there jah-quashia soul</title>
 </head>
 <body><h1>No one understand how much my girls truthfully mean to me </h1>
@@ -9,7 +18,7 @@
 
   <hr />
 <!-- change the p anchors from 21 to 20-->
-<P> <strong>ANOTHER</strong> <em>PARAGRAPH</em> </p>
+<P> <strong>18 YEARS OLD</strong> <em>i had my first child</em>then at 22 its when samirah was born</p>
 <h3>SO I CAN TAKE CARE OF MY GIRLS & MY SELF</h3>
 <P> ANOTHER PARAGRAPH </p>
 <a href="http://findingjoy.net/how-to-be-better-mom-in-five-steps/#.WBKo9uMrLIU" title="quay really recommends this page">This is a website i really agree with truthfully i took my time out and read amounst lots of other cites and its the best i love it click this purple text if you want another resourse as to how to be with your children</a>
@@ -26,6 +35,14 @@
             <td>cheesy eggs & toast</td>
             <td>sandwitchs</td>
             <td>meat rice & veggies</td>
+        <tr>
+            <td>jelly & toast</td>
+            <td>french frie</td>
+            <td>macaroni & cheese</td>
+        <tr>
+          <td>tofu & toast</td>
+          <td>pizza</td>
+          <td>most baked foods</td>
 </table>
 <table border="1" width="100%">
    <tr>
@@ -47,6 +64,20 @@
 <p>more information about my girls like whole information</p>
   <p>new paragrap</p>
   <a href="mailto:sahryah4@gmail.com">email quay</a>
+<ol>my ordered list
+<li>me</li>
+<li>yo</li>
+<li>the</li>
+
+</ol>
+  <ul>my unordered list of iteims
+   <li>text</li>
+   <li>text</li>
+   <li>text</li>
+   <li>text</li>
+   <li>text</li>
+   <li>text</li>
+ </ul>
 
 </body>
 </html>
