--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 <head>
   <style type="text/css">
-  body { background-image:url(them2.jpg);
+  body {
+    background-image:url(them2.jpg);
   }
   h1 {text-align:center;}
   body h1 {
@@ -19,10 +20,10 @@ color:#f44289;
 <!-- change the p anchors from 21 to 20-->
 <P> <strong>18 YEARS OLD</strong> <em>i had my first child</em>then at 22 its when samirah was born</p>
 <h3>SO I CAN TAKE CARE OF MY GIRLS & MY SELF</h3>
-<P> ANOTHER PARAGRAPH </p>
+<P> Im planning on becoming a front en web developer this is a 6 figure income that i no will help me have funds to be able to achieve all my goals with raising my children</p>
 <a href="http://findingjoy.net/how-to-be-better-mom-in-five-steps/#.WBKo9uMrLIU" title="quay really recommends this page">This is a website i really agree with truthfully i took my time out and read amounst lots of other cites and its the best i love it click this purple text if you want another resourse as to how to be with your children</a>
 <h4>& only depening on my check</h4>
-<P>ANOTHER PARAGRAPH</p>
+<P>my main goal out of this class is to be able to make and style a webpage i belive this is a good route to go down for a career</p>
   <a href="second.html">click here for picture of my babies & you can also click there photos to find a linked website based on how i feed them</a>
 <h5>here is and example of there favorite foods</h5>
 <table border="2"  width='100%'>
@@ -47,21 +48,11 @@ color:#f44289;
    <tr>
     <th colspan="3"><h2>odd but cool things about kids</h2></th>
    </tr>
-   <tr>
-     <th>things they do</th>
-     <th>thigs they eat</th>
-     <th>things they love</th>
-   </tr>
-   <tr></tr>
-   <tr></tr>
-   <tr></tr>
 
-<P> ANOTHER PARAGRAPH </p>
-<h6>i dont want to ask a family member for not a damm thing</h6>
-<H4><name="DOB"></a>DOB</H4>
+<P>my children are very healthy and eat alot through the day so i try to keep them balanced</p>
+<H4><a name="DOB"></a>DOB</H4>
  SAHRYAH COOKIE TINSLEY born 08-30-11<br /> SAMIRAH ANN DUCKETT BORN 11-04-14
-<p>more information about my girls like whole information</p>
-  <p>new paragrap</p>
+<p>sahryah was born in the bronx  was baby sitting my cousins and went into labor then came sahryah i was in labore a whole 25 hours i was young so i didnt use no epiderl</p>
   <a href="mailto:sahryah4@gmail.com">email quay</a>
 <ol>my ordered list
 <li>me</li>
@@ -77,6 +68,7 @@ color:#f44289;
    <li>text</li>
    <li>text</li>
  </ul>
+ <h6>i dont want to ask a family member for not a damm thing</h6>
 
 </body>
 </html>
