changed the backround color

--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <html>
 <head>
   <style type="text/css">
-  body {
-    background-image:url(them2.jpg);
+  p{
+    background-color:pink;
   }
-  h1 {text-align:center;}
-  body h1 {
-color:#f44289;
-  }
+
   </style>
 <title>samirah & sahryah there jah-quashia soul</title>
 </head>
