--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 
 <html>
 <head>
+<style type="text/css">
+a:link{color:green;
+  text-decoration:none;}
+a:visited{color:orange;}
+a:hover{background-color:pink;}
+
+</style>
   <title>samirah & sahryah there jah-quashia soul</title>
 </head>
 <body><h1>No one understand how much my girls truthfully mean to me </h1>
