now im messing aroung with my external css

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <html>
 <head>
-<style type="text/css">
+<style>
+<link rel="stylesheet" type="text/css" href="mygirls.css"/>
 a:link{color:green;
   text-decoration:none;}
 a:visited{color:orange;}
 a:hover{background-color:pink;}
-
+span {color:yellow;}
 </style>
   <title>samirah & sahryah there jah-quashia soul</title>
 </head>
@@ -47,7 +48,7 @@ a:hover{background-color:pink;}
     <th colspan="3"><h2>odd but cool things about kids</h2></th>
    </tr>
 
-<P>my children are very healthy and eat alot through the day so i try to keep them balanced</p>
+<P>my <span>children</span> are very healthy and eat alot through the day so i try to keep them balanced</p>
 <H4><a name="DOB"></a>DOB</H4>
  SAHRYAH COOKIE TINSLEY born 08-30-11<br /> SAMIRAH ANN DUCKETT BORN 11-04-14
 <p>sahryah was born in the bronx  was baby sitting my cousins and went into labor then came sahryah i was in labore a whole 25 hours i was young so i didnt use no epiderl</p>
