--- a/second.html
+++ b/second.html
@@ -2,10 +2,14 @@
 
 <html>
 <head>
+  <style type="text/css">
+h1 {color:pink;
+    background-color:purple;}
+  </style>
 <title>second page</title>
 </head>
 <body>
-<a>These are pictures of my creations</a>
+<h1>These are pictures of my creations</h1>
 <a href="https://www.google.com/search?q=food+pyramid+2016&biw=1366&bih=662&tbm=isch&imgil=BEqNA2289ScQ0M%253A%253Bx0Bzqqp2t-modM%253Bhttp%25253A%25252F%25252Fwww.npr.org%25252Fsections%25252Fthesalt%25252F2016%25252F01%25252F13%25252F462821161%25252Fillustrating-diet-advice-is-hard-heres-how-usda-has-tried-to-do-it&source=iu&pf=m&fir=BEqNA2289ScQ0M%253A%252Cx0Bzqqp2t-modM%252C_&usg=__A0gqJke78oWLfbYfumbHw8PgThU%3D&ved=0ahUKEwiCnuy8q_zPAhXEMyYKHb50AhUQyjcINQ&ei=w6gSWMKwBsTnmAG-6YmoAQ#imgrc=BEqNA2289ScQ0M%3A">
 <img src="them.jpg">
 <img src="ryah.jpg" height="350">
